--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
     <div id="app" class="container">
         <div id="setup-view" class="card">
+            <button id="theme-toggle" class="theme-toggle" aria-label="Toggle Theme">
+                <i data-lucide="sun"></i>
+            </button>
             <h1>WordMaster</h1>
             <div class="input-group">
                 <label>Select from Library</label>
@@ -20,12 +23,12 @@
                 </select>
             </div>
 
-            <div id="quiz-mode-selection" style="margin-top: 1rem; display: flex; gap: 1rem; justify-content: center;">
-                <label style="cursor: pointer; display: flex; align-items: center; gap: 0.5rem;">
+            <div id="quiz-mode-selection">
+                <label>
                     <input type="radio" name="quiz-mode" value="spelling-only" checked>
                     Spelling Only
                 </label>
-                <label style="cursor: pointer; display: flex; align-items: center; gap: 0.5rem;">
+                <label>
                     <input type="radio" name="quiz-mode" value="both">
                     Spelling & Meaning
                 </label>
@@ -100,11 +103,12 @@
             <div id="stats-detail" style="color: var(--text-muted); text-align: center; margin-bottom: 2rem;">
                 You got 12/15 words correct.
             </div>
-            <button id="final-restart-btn">
-                <i data-lucide="rotate-ccw"></i>
-                Restart
-            </button>
+            <button id="final-restart-btn" class="secondary-btn"><i data-lucide="refresh-cw"></i> Restart Quiz</button>
         </div>
+
+        <footer class="copyright-footer">
+            &copy; 2026 Neio Zhou. All rights reserved.
+        </footer>
     </div>
 
     <script type="module" src="src/app.js"></script>
